# TimeTracker

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1102f0048b54_add_description_to_tbltime.py  145cbcf6adff_create_project_time_table.py  5f0a29fc86de_add_project_number.py
backend/app/: main.py
backend/app/database/: contract.py  db.py  project.py  project_budget.py  project_time.py  time.py
backend/app/routers/: analytics.py  contract.py  projects.py  time.py
db/: schema.sql
frontend/: package-lock.json  pnpm-lock.yaml
nginx/: default.conf
nginx/ssl/: test.crt  test.key
nodered/: flows.json
