[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.25",
]


[tool.alembic]

# path to migration scripts.
script_location = "%(here)s/alembic"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]